# yaml-schema-validator

./: .pre-commit-hooks.yaml  Dockerfile  README.md  README_submission.md  Report.md  main.py  pyproject.toml  requirements.txt  setup.py
docs/: README.md
examples/: test_2.yaml  valid_config.yaml
examples/ci/: github-action.yml
examples/invalid/: missing_type.yaml  syntax_indent.yaml  syntax_tabs.yaml
examples/valid/: test_1.yaml  test_3.yaml
src/: __init__.py  validator.py
src/core/: __init__.py  models.py
src/fixer/: __init__.py  auto_fixer.py
src/loader/: __init__.py  pydantic_loader.py
src/output/: __init__.py  report_generator.py  rich_formatter.py
src/parser/: __init__.py  yaml_parser.py
src/profiles/: __init__.py  loader.py
src/rules/: __init__.py  base.py  core_rules.py
src/wizard/: __init__.py
src/yaml_validator/: __init__.py
tests/: __init__.py  conftest.py  test_core_rules.py  test_end_to_end.py  test_integration.py  test_loader.py  test_parser.py  test_profile_rules.py  test_profiles.py  test_schema_loader.py  test_semantic_rules.py  test_syntax_parser.py
yaml_validator/: __init__.py  exceptions.py  validator.py
yaml_validator/formatters/: __init__.py  html_report.py  terminal_output.py
yaml_validator/models/: __init__.py  schema_definitions.py  validation_result.py
yaml_validator/pipeline/: __init__.py  profile_rules.py  schema_loader.py  semantic_rules.py  syntax_parser.py
yaml_validator/profiles/: __init__.py  profile_loader.py
yaml_validator/rules/: __init__.py  rule_base.py
yaml_validator/tools/: __init__.py  (+2 more)
(+3 files in other folders)
